[project]
name = "neutronmido"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mido>=1.3.2",
    "packaging>=23.2 ; python_full_version >= '3.7'",
    "pip>=25.1.1",
    "pyside6>=6.9.1",
    "pyside6-addons>=6.6.3 ; python_full_version >= '3.8' and python_full_version < '3.13'",
    "pyside6-essentials>=6.6.3 ; python_full_version >= '3.8' and python_full_version < '3.13'",
    "python-rtmidi>=1.5.8",
    "shiboken6>=6.6.3 ; python_full_version >= '3.8' and python_full_version < '3.13'",
]
